--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- UNICONS -->
+    <!-- UNICONS -->
 
-  <!-- SWIPER CSS -->
-  <link rel="stylesheet" href="">
+    <!-- SWIPER CSS -->
+    <link rel="stylesheet" href="">
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="/css/styles.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/styles.css">
 
-  <title>Responsive Portfolio Website</title>
-</head>
-<body>
-  <!-- HEADER -->
-  
-</body>
+    <title>Responsive Portfolio Website</title>
+  </head>
+
+  <body>
+    <!-- HEADER -->
+
+    <!-- MAIN -->
+    <main class="main">
+
+    </main>
+
+    <!-- FOOTER -->
+
+    <!-- SCROLL TOP -->
+
+    <!-- SWIPER JS -->
+    <script src=""></script>
+
+    <!-- MAIN JS -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
