--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- HEADER -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Sarah</a>
+        <a href="#" class="nav__logo">Daniel</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -101,6 +101,7 @@
                   129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                   -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
                   <image class="home__blob-img" x='30' y='-30' href="assets/img/perfil.png" />
+              </g>
               </svg>
             </div>
             
@@ -142,15 +143,15 @@
 
             <div class="about__info">
               <div>
-                <span class="about__info-title">08+</span>
+                <span class="about__info-title">0</span>
                 <span class="about__info-name">Years <br> experience</span>
               </div>
               <div>
-                <span class="about__info-title">20+</span>
+                <span class="about__info-title">0</span>
                 <span class="about__info-name">Completed <br> project</span>
               </div>
               <div>
-                <span class="about__info-title">05+</span>
+                <span class="about__info-title">0</span>
                 <span class="about__info-name">Companies <br> worked</span>
               </div>
             </div>
