--- a/index.html
+++ b/index.html
@@ -374,31 +374,33 @@
                 </div>
               </div>
 
-              <!-- Qualification 2-->
+              <!-- Qualification 2 -->
               <div class="qualification__data">
-                <div>
-                  <h3 class="qualification__title">Computer Science</h3>
-                  <span class="qualification__subtitle">Univeristy of Derby</span>
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2018-2021
-                  </div>
-                </div>
+                <div></div>
 
                 <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">Technical Programming Level 3</h3>
+                  <span class="qualification__subtitle">Burton and South Derbyshire College</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2016-2018
+                  </div>
                 </div>
               </div>
 
               <!-- Qualification 3-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Computer Science</h3>
-                  <span class="qualification__subtitle">Univeristy of Derby</span>
+                  <h3 class="qualification__title">Information Technology Level 2</h3>
+                  <span class="qualification__subtitle">Burton and South Derbyshire College</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2018-2021
+                    2015-2016
                   </div>
                 </div>
 
@@ -410,6 +412,28 @@
 
               <!-- Qualification 4-->
               <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">Secondary School</h3>
+                  <span class="qualification__subtitle">The Pingle Academy</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2012-2015
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Qualification content 2-->
+            <div class="qualification__content">
+              <!-- Qualification 1-->
+              <div class="qualification__data">
                 <div>
                   <h3 class="qualification__title">Computer Science</h3>
                   <span class="qualification__subtitle">Univeristy of Derby</span>
@@ -422,6 +446,61 @@
                 <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!-- Qualification 2 -->
+              <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">Technical Programming Level 3</h3>
+                  <span class="qualification__subtitle">Burton and South Derbyshire College</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2016-2018
+                  </div>
+                </div>
+              </div>
+
+              <!-- Qualification 3-->
+              <div class="qualification__data">
+                <div>
+                  <h3 class="qualification__title">Information Technology Level 2</h3>
+                  <span class="qualification__subtitle">Burton and South Derbyshire College</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2015-2016
+                  </div>
+                </div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+
+              <!-- Qualification 4-->
+              <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">Secondary School</h3>
+                  <span class="qualification__subtitle">The Pingle Academy</span>
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2012-2015
+                  </div>
                 </div>
               </div>
             </div>
