--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     
     <!-- SWIPER CSS -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -343,12 +343,12 @@
 
         <div class="qualification__container container">
           <div class="qualification__tabs">
-            <div class="qualification__button button--flex">
+            <div class="qualification__button button--flex qualification__active" data-target='#education'>
               <i class="uil uil-graduation-cap qualification__icon"></i>
               Education
             </div>
 
-            <div class="qualification__button button--flex">
+            <div class="qualification__button button--flex" data-target='#work'>
               <i class="uil uil-briefcase-alt qualification__icon"></i>
               Work
             </div>
@@ -356,7 +356,7 @@
 
           <div class="qualification__sections">
             <!-- Qualification content 1-->
-            <div class="qualification__content">
+            <div class="qualification__content qualification__active" data-content id="education">
               <!-- Qualification 1-->
               <div class="qualification__data">
                 <div>
@@ -430,16 +430,16 @@
               </div>
             </div>
 
-            <!-- Qualification content 2-->
-            <div class="qualification__content">
+            <!-- Qualification content 2 -->
+            <div class="qualification__content" data-content id="work">
               <!-- Qualification 1-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Computer Science</h3>
-                  <span class="qualification__subtitle">Univeristy of Derby</span>
+                  <h3 class="qualification__title">Service Desk Analyst</h3>
+                  <span class="qualification__subtitle">NatWest Bank</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2018-2021
+                    2021-Present
                   </div>
                 </div>
 
@@ -459,11 +459,11 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification__title">Technical Programming Level 3</h3>
-                  <span class="qualification__subtitle">Burton and South Derbyshire College</span>
+                  <h3 class="qualification__title">Customer Service</h3>
+                  <span class="qualification__subtitle">Sitel</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2016-2018
+                    2021-2021
                   </div>
                 </div>
               </div>
@@ -471,11 +471,11 @@
               <!-- Qualification 3-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Information Technology Level 2</h3>
-                  <span class="qualification__subtitle">Burton and South Derbyshire College</span>
+                  <h3 class="qualification__title">Warehouse Operative</h3>
+                  <span class="qualification__subtitle">Argos</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2015-2016
+                    2016-2020
                   </div>
                 </div>
 
@@ -495,23 +495,199 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification__title">Secondary School</h3>
-                  <span class="qualification__subtitle">The Pingle Academy</span>
+                  <h3 class="qualification__title">Office Assistant</h3>
+                  <span class="qualification__subtitle">Burnel Health Care</span>
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2012-2015
+                    2014-2014
                   </div>
                 </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+
+      <!-- SERVICES -->
+      <section class="services section" id="services">
+        <h2 class="section__title">Services</h2>
+        <span class="section__subtitle">What I offer</span>
+
+        <div class="services__container container grid">
+          <!-- SERVICES 1 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-web-grid services__icon"></i>
+              <h3 class="services__title">Ui/Ux <br> Designer</h3>
+            </div>
+
+            <span class="button button--flex button--small button--link services__button">
+              View More
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I create ux element interactions.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I position your company brand.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- SERVICES 2 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-arrow services__icon"></i>
+              <h3 class="services__title">Frontend <br> Developer</h3>
+            </div>
+
+            <span class="button button--flex button--small button--link services__button">
+              View More
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I create ux element interactions.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I position your company brand.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- SERVICES 3 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-pen services__icon"></i>
+              <h3 class="services__title">Branding <br> Designer</h3>
+            </div>
+
+            <span class="button button--flex button--small button--link services__button">
+              View More
+              <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__modal">
+              <div class="services__modal-content">
+                <h4 class="services__modal-title">Branding <br> Designer</h4>
+                <i class="uil uil-times services__modal-close"></i>
+
+                <ul class="services__modal-services grid">
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I develop the user interface.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>Web page development.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I create ux element interactions.</p>
+                  </li>
+                  <li class="services__modal-service">
+                    <i class="uil uil-check-circle services__modal-icon"></i>
+                    <p>I position your company brand.</p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- SERVICES -->
-
-
       <!-- PORTFOLIO -->
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">Portfolio</h2>
+        <span class="section__subtitle">Most recent work</span>
+
+        <div class="portfolio__container container swiper">
+          <div class="swiper-wrapper">
+            <!-- PORTFOLIO 1 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">ANAX</h3>
+                <p class="portfolio__description">Cryptocurrency website featuring NFTs.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Demo <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+
+            <!-- PORTFOLIO 2 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">ANAX</h3>
+                <p class="portfolio__description">Cryptocurrency website featuring NFTs.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Demo <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+
+            <!-- PORTFOLIO 3 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">ANAX</h3>
+                <p class="portfolio__description">Cryptocurrency website featuring NFTs.</p>
+                <a href="#" class="button button--flex button--small portfolio__button">Demo <i class="uil uil-arrow-right button__icon"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Arrows -->
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+          </div>
+
+          <!-- Pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
 
       
       <!-- PROJECT IN MIND -->
@@ -530,7 +706,7 @@
     <!-- SCROLL TOP -->
 
     <!-- SWIPER JS -->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!-- MAIN JS -->
     <script src="assets/js/main.js"></script>
