--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
-              <a href="#home" class="nav__link">
+              <a href="#home" class="nav__link active-link">
                 <i class="uil uil-estate nav__icon"></i> Home
               </a>
             </li>
@@ -60,6 +60,8 @@
         </div>
 
         <div class="nav__btns">
+          <!-- Theme change button -->
+          <i class="uil uil-moon change-theme" id="theme-button"></i>
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
@@ -113,16 +115,16 @@
                 Contact Me<i class="uil uil-message button__icon"></i>
               </a>
             </div>
-
-
-            <div class="home__scroll">
-              <a href="#about" class="home__scroll-button button--flex">
-                <i class="uil uil-mouse-alt home__scroll-mouse"></i>
-                <p class="home__scroll-name">Scroll down</p>
-                <i class="uil uil-arrow-down home__scroll-arrow"></i>
-              </a>
-            </div>
           </div>
+
+          <div class="home__scroll">
+            <a href="#about" class="home__scroll-button button--flex">
+              <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+              <p class="home__scroll-name">Scroll down</p>
+              <i class="uil uil-arrow-down home__scroll-arrow"></i>
+            </a>
+          </div>
+          
         </div>
       </section>
 
@@ -156,7 +158,7 @@
               </div>
             </div>
 
-            <div class="about_buttons">
+            <div class="about__buttons">
               <a href="assets/pdf/CV-Daniel.pdf" class="button button--flex">
                 Download CV<i class="uil uil-file-download-alt button__icon"></i></a>
             </div>
@@ -169,7 +171,7 @@
         <h2 class="section__title">Skills</h2>
         <span class="section__subtitle">Technologies</span>
 
-        <div class="skills_container container grid">
+        <div class="skills__container container grid">
           <div>
             <!-- SKILLS 1-->
             <div class="skills__content skills__open">
@@ -895,12 +897,15 @@
             </a>
           </div>
 
-          <p class="footer__copy">&#169; DB. All rights reserved.</p>
         </div>
+        <p class="footer__copy">&#169; DB. All rights reserved.</p>
       </div>
     </footer>
 
     <!-- SCROLL TOP -->
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="uil uil-arrow-up scrollup__icon"></i>
+    </a>
 
     <!-- SWIPER JS -->
     <script src="assets/js/swiper-bundle.min.js"></script>
