--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
 
             <div class="about__buttons">
-              <a href="assets/pdf/CV-Daniel.pdf" class="button button--flex">
+              <a href="assets/pdf/CV.pdf" class="button button--flex">
                 Download CV<i class="uil uil-file-download-alt button__icon"></i></a>
             </div>
           </div>
