--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
               
               <div>
                 <h3 class="contact__title">Call me</h3>
-                <span class="contact__subtitle">+44 785 824 6334</span>
+                <span class="contact__subtitle">+44 000 000 0000</span>
               </div>
             </div>
 
@@ -813,7 +813,7 @@
               
               <div>
                 <h3 class="contact__title">Email</h3>
-                <span class="contact__subtitle">unnamedacc99@gmail.com</span>
+                <span class="contact__subtitle">emailaddres@gmail.com</span>
               </div>
             </div>
 
